syntax = "proto3";
option go_package = "./pb";
package proto;

message UserRequest{
    string email = 1;
    string password = 2;
}

message DeleteUserRequest {
    string email = 1;
}

message GetUserByEmailRequest {
    string email = 1;
}

message GetUserByEmailResponse {
    uint32 id = 1;
    string email = 2;
    string password = 3;
    string role = 4;
    bool hasAccount = 5;
}

message AddAdminRequest{
    string email = 1;
}

message GetUserEmailByIdRequest{
    uint32 id = 1;
}

message ResponseMessage{
    string message = 1;
}

message CheckUserExistenceRequest{
    uint32 id = 1;
}

message  CheckUserExistenceResponse{
    bool message = 1;
}

message GetAdminEmailsResponse {
  repeated string admin_emails = 1;
}

message GetAdminEmailsRequest {
}